--- a/README.Rmd
+++ b/README.Rmd
@@ -2,6 +2,7 @@
 title: "COVID-19 modeling in South Dakota"
 date: '`r format(Sys.Date(), "%B %d, %Y")`'
 output: github_document
+output: html_document
 ---
 # Authors
 *Jeff Wesner, Ph.D.*^1^, *Dan Van Peursem, Ph.D.*^2^, *Jose Flores, Ph.D.*^2,3^, *Yuhlong Lio, Ph.D.*^2^
@@ -16,17 +17,11 @@ University of South Dakota
 To predict hospital bed needs, ICU needs, and ventilator needs in South Dakota due to COVID-19. 
 
 # Updates
-*We updated the model from previous versions by 1) varying generation times in each simulation and 2) varying hospitalization rates, icu rates, and ventilator rates in each simulation. Previous versions of this model assumed fixed rates for these parameters. Future updates will be also include varying R0, since it has become clear that the initial exponential growth in cases has slowed (but then risen again most recently). 
 
-# General Approach and Justification
-We estimated R0 from current incidence rates in South Dakota. We then fit SIR models using our estimates of R0 and compared model predictions to actual values of hospitalizations reported by the South Dakota Department of Health (data source: https://www.keloland.com/keloland-com-original/why-south-dakotas-number-of-deaths-isnt-always-up-to-date/. We chose this approach because it does not rely on external estimates of R0, but instead derives them from data specific to South Dakota.
+# Alternative Approach
+## Directly modeling hospital bed use
 
-Because our estimates of R0 are derived from reported incidence data, they reflect any day-to-day adjustments in R0 due to social distancing (with an unknown lag time). In other words, as social distancing reduces incidence, that will be reflected in our estimates of R0. It is worth noting that reported incidence is almost certainly lower than true incidence. However, this does not alter our estimates of R0, assuming that the rate of underreporting is constant across time.
-
-At present, we are limiting the estimate of R0 to the first 50 days of incidence data. That captures the positive growth period in incidence so far, but will need to be adjusted for future variations.
-
-# Derivation of R0
-We used the following equation to estimate R0 (eqn 3.1 in Wallinga and Lipsitch 2007) https://www.ncbi.nlm.nih.gov/pmc/articles/PMC1766383/?report=reader#!po=83.3333:
+Our previous approach attempted to estimate hospital bed use from an initial SIR (see *Past Approach* below). However, there is now enough data to directly model the curve of cumulative COVID related hospitalizations. To do that, we first used the Weibull equation to fit a Bayesian non-linear curve to cumulative hospitalization data (first graph below). We then converted that cumulative prediction to active hospitalizations by varying the days in the hospital to fit the data on active hospitalizations.   
 ```{r echo=FALSE, message=FALSE, warning=FALSE, paged.print=FALSE}
 library(tidyverse)
 library(here)
@@ -44,6 +39,254 @@ library(viridis)
 library(brms)
 library(kableExtra)
 ```
+
+
+```{r echo=FALSE, fig.height=2, message=FALSE, warning=FALSE, paged.print=FALSE}
+ggplot() +
+  annotate("text", x = 0.5, y = 0.7,
+                   label = "(y_cumulative[i]) %~% italic(N)(mu[i], sigma)", parse = T, family = "serif") +
+  annotate("text", x = 0.5, y = 0.52,
+           label = "italic(mu[i]) == frac(italic(max)*date[i]^omega, theta^omega + date[i]^omega)", parse = T, family = "serif") +
+  annotate("text", x = 0.5, y = 0.35,
+           label = "italic(max) %~% italic(beta)(2.76, 549)", parse = T, family = "serif") +
+  annotate("text", x = 0.5, y = 0.27,
+           label = "italic(theta) %~% italic(Gamma)(4, 0.04)", parse = T, family = "serif") +
+   annotate("text", x = 0.5, y = 0.19,
+           label = "italic(omega) %~% italic(N)(4, 0.4)", parse = T, family = "serif") +
+  annotate("text", x = 0.5, y = 0.11,
+           label = "sigma %~% italic(HalfCauchy)(0,1)", parse = T, family = "serif") +
+  coord_cartesian(ylim = c(0.11, .8)) +
+  labs(title = "Weibull non-linear regression:") +
+  theme_void() +
+  theme(text = element_text(family = "serif"))
+```
+
+Prior values for are loosely derived from from New York City's hospitalization curve in which ~ 0.4% of the population was hospitalized. we also bounded the proportion of hospitalizations at zero to prevent predictions of negative hospitalizations.
+
+## Weibull results
+
+Results from the model suggest that South Dakota either has or shortly will reach its peak in COVID-related hospitalizations at ~80 people actively hospitalized.
+
+```{r include=FALSE, cache = T}
+sd_pop <- 903027 #from here: https://worldpopulationreview.com/states/south-dakota-population/
+
+sd_covid_data <- read.csv(here::here("data/data_kelo.csv")) %>%
+  clean_names() %>%
+  mutate(date_num = as.numeric(mdy(date)) - 18329,
+         date = mdy(date),
+         source = "SD_DOH via Keloland news",
+         incidence = positive_cases - lag(positive_cases),
+         cum_hosp = parse_number(as.character(hospitalized)),
+         incidence1 = incidence + 1,
+         cum_prop_hosp = cum_hosp/sd_pop)  ##adds 1 to all incidence to allow for zeros in log-linear regression
+
+
+all_hosp <- sd_covid_data %>% select(date, hospitalized_currently) %>% arrange(date)
+
+
+
+#hosp_beds
+sd_hospital_beds <- read_excel(here::here("data/sd_hospital_beds.xlsx")) %>% 
+  clean_names()
+
+all_beds <- sum(sd_hospital_beds$total_beds)
+
+#nyc data from here: https://www1.nyc.gov/site/doh/covid/covid-19-data.page
+nyc_hosp <- nyc_hosp <- read_csv("data/nyc_hosp.csv") %>% clean_names() %>% 
+  mutate(cum_hosp = cumsum(hospitalizations),
+         nyc_pop = 8900000,
+         date = mdy(date_of_interest),
+         date_num = as.numeric(date) - 18323,
+         cum_prop_hosp = cum_hosp/nyc_pop) %>% 
+  mutate(cum_hosp_rate = cum_hosp/max(cum_hosp),
+         date_rate = date_num/max(date_num))
+
+max_prop_hosp <- max(nyc_hosp$cum_prop_hosp)
+sd_prior_max = sd_pop*max_prop_hosp
+sd_prior_maxsd = 2000 
+
+
+# fit weibull model 
+
+beta_parms <- function(mean, sd) {
+  out <- tibble(alpha = (mean^2 - mean^3 - mean*sd^2)/sd^2,
+                beta = (mean - 2*mean^2 + mean^3 - sd^2 + mean*sd^2)/sd^2)
+  
+  plot <- plot(density(rbeta(1000, out[[1]], out[[2]])))
+  return(out)
+  return(plot)
+}
+
+gamma_parms <- function(mean, sd) {
+  out <- tibble(shape = mean^2/sd^2,
+                rate = mean/sd^2,
+                scale = 1/(mean/sd^2))
+  return(out)
+  return(plot)
+}
+
+beta_parms(mean = 0.005, sd = 0.003)
+gamma_parms(mean = 150, sd = 50)
+
+
+fit_weib <- brm(bf(cum_prop_hosp|trunc(lb = 0) ~ (ult*date_num^omega)/(theta^omega + date_num^omega),
+                   ult ~ 1, omega ~ 1, theta ~ 1,
+                   nl = TRUE),
+                data = sd_covid_data,
+                # family = gaussian(),
+                family = gaussian(),
+                prior = c(
+                  prior(beta(2.76, 549), nlpar = "ult"), #original_prior
+                  prior(gamma(4, 0.04), nlpar = "theta"),
+                  prior(normal(4, 0.4), nlpar = "omega")),
+                iter = 4000,
+                sample_prior = "yes")
+
+# fit_may11 <- fit_weib
+# fit_weib <- update(fit_may11, newdata = sd_covid_data, iter = 4000) #re-run the model above with today's data (this shortcut just prevents the need to recompile the model)
+
+# priors come from here:
+# ult is the Asymptote: Prior assumes asymptote with mean of 4000 cumulative total people ever hospitalized with wide sd of 2000 - parameterized as beta. That is
+# based on NYC's curve, in which a total of 0.45% of their population was ever hospitalized.
+
+# theta is the inflection point - Prior assumes mean of 100 with sd of 30 days - parameterized as gaussian. 
+# omega is the slope of inflection point - Prior assumes mean of 50 with sd of 20 - parameterized as gamma.
+
+
+#predictions up to 200 days after the first hospitalization
+newdata = tibble(date_num = 0:200)
+
+predict_cumulative <- predict(fit_weib, newdata = newdata, probs = c(0.025, 0.975, 0.25, 0.75))  %>% 
+  as_tibble() %>% 
+  clean_names() %>% 
+  mutate(date_num = 18329 + newdata$date_num,
+         date = as_date(date_num),
+         method = "predicted") 
+
+
+
+#make predictions of daily hospital needs
+days_in_hosp <- 10 #adjusted to visually match actual active hosps
+
+predict_dailyhosp <- predict(fit_weib, newdata = newdata, summary = F)  %>%
+  as_tibble() %>%
+  mutate(iter = 1:nrow(.)) %>%
+  gather(key, value, -iter) %>%
+  mutate(date_num = 18328 + parse_number(key),
+         date = as_date(date_num)) %>%
+  arrange(iter, date_num) %>%
+  group_by(iter) %>%
+  mutate(daily_total = value - lag(value, days_in_hosp)) %>%
+  group_by(date_num) %>%
+  drop_na(daily_total) %>%
+  mutate(daily_total = daily_total*sd_pop) %>%
+  group_by(iter, date) %>% 
+  filter(!any(daily_total < 0)) %>% 
+  group_by(date) %>% 
+  summarize(median = median(daily_total),
+            mean = mean(daily_total),
+            sd = sd(daily_total),
+            high95 = quantile(daily_total, probs = 0.975),
+            high50 = quantile(daily_total, probs = 0.75),
+            low95 = quantile(daily_total, probs = 0.025),
+            low50 = quantile(daily_total, probs = 0.25))
+```
+```{r echo=FALSE, fig.height=9, fig.width=8, message=FALSE, warning=FALSE, paged.print=FALSE}
+# Make plots
+
+cumulative_plot <- predict_cumulative %>% 
+  ggplot(aes(x = date, y = estimate*sd_pop)) +
+  geom_line() +
+  geom_ribbon(aes(ymin = q2_5*sd_pop, ymax = q97_5*sd_pop), alpha = 0.2 , fill = "dodgerblue") +
+  geom_ribbon(aes(ymin = q25*sd_pop, ymax = q75*sd_pop), alpha = 0.2 , fill = "dodgerblue")+
+  geom_point(data = sd_covid_data, aes(x = date, y = cum_prop_hosp*sd_pop),
+             shape = 21, fill = "yellow") +
+  theme_classic() +
+  scale_x_date(date_breaks = "months" , date_labels = "%b") +
+  # ylim(0, 1500) +
+  labs(y = "Cumulative hospitalized",
+       title = "Weibull model results",
+       subtitle = "Dots = data. Shading = 50% and 95% prediction intervals") +
+  NULL
+
+
+active_plot <- predict_dailyhosp %>% 
+  ggplot() +
+  geom_line(aes(x = date, y = median)) +
+  geom_ribbon(aes(x = date, ymin = low95, ymax = high95), alpha = 0.2, fill = "dodgerblue") +
+  geom_ribbon(aes(x = date, ymin = low50, ymax = high50), alpha = 0.2, fill = "dodgerblue") +
+  geom_point(data = all_hosp, aes(x = date, y = hospitalized_currently),
+             shape = 21, fill = "yellow") +
+  scale_x_date(date_breaks = "months" , date_labels = "%b") +
+  theme_classic() +
+  # geom_hline(yintercept = all_beds, color = "dodgerblue") +
+  # annotate("text", x = as.Date("2020-04-10"), y = 2960, label = "All Hospital Beds\nin SD") +
+  labs(y = "Active hospitalizations",
+       title = "Predicting active hospitalizations from Weibull model",
+       subtitle = "Dots = data. Shading = 50% and 95% prediction intervals") +
+  coord_cartesian(ylim = c(0,100)) +
+  NULL
+
+
+both_plot_weib <- plot_grid(cumulative_plot, active_plot, ncol = 1)
+
+both_plot_weib
+```
+
+## Influence of the priors
+The plot below compares the prior predictive distribution (i.e. running the model with only the prior information, not the data) to the posterior predictive distribution. The large difference in these predictions indicates that we learned a lot of information from the data and the priors have relatively small influences.
+
+```{r echo=FALSE, message=FALSE, warning=FALSE, paged.print=FALSE}
+#prior v post
+
+posts <- posterior_samples(fit_weib) %>% as_tibble()
+x = seq(1,200, by = 10)
+
+priors <- posts %>% select(prior_b_ult, prior_b_omega, prior_b_theta) %>% sample_n(1000) %>% 
+  expand_grid(x) %>% 
+  mutate(prior_pred = (prior_b_ult*x^prior_b_omega)/(prior_b_theta^prior_b_omega + x^prior_b_omega),
+         model = 'prior_prediction')
+
+posteriors <- posts %>% select(b_ult_Intercept, b_omega_Intercept, b_theta_Intercept) %>% sample_n(1000) %>% 
+  expand_grid(x) %>% 
+  mutate(prior_pred = (b_ult_Intercept*x^b_omega_Intercept)/(b_theta_Intercept^b_omega_Intercept + x^b_omega_Intercept),
+         model = 'posterior_prediction')
+
+all_posts <- bind_rows(priors, posteriors)%>% 
+  mutate(date_num = 18329 + x,
+         date = as_date(date_num))
+
+all_posts %>% 
+  group_by(x, model) %>% 
+  summarize(mean = mean(prior_pred),
+            low95 = quantile(prior_pred, probs = 0.025),
+            high95 = quantile(prior_pred, probs = 0.975)) %>% 
+  ggplot(aes(x = x, y = mean*sd_pop, ymin = low95*sd_pop, ymax = high95*sd_pop,
+             color = model, fill = model)) +
+  geom_line() + 
+  geom_ribbon(alpha = 0.2) +
+  theme_classic() +
+  scale_x_date(date_breaks = "months" , date_labels = "%b") +
+  # ylim(0, 1500) +
+  labs(y = "Cumulative hospitalized",
+       title = "Prior versus Posterior",
+       subtitle = "Difference in models indicates the influence of the data") +
+  NULL
+```
+
+
+
+
+
+# Past Approach - SIR
+We estimated R0 from current incidence rates in South Dakota. We then fit SIR models using our estimates of R0 and compared model predictions to actual values of hospitalizations reported by the South Dakota Department of Health (data source: https://www.keloland.com/keloland-com-original/why-south-dakotas-number-of-deaths-isnt-always-up-to-date/. We chose this approach because it does not rely on external estimates of R0, but instead derives them from data specific to South Dakota.
+
+Because our estimates of R0 are derived from reported incidence data, they reflect any day-to-day adjustments in R0 due to social distancing (with an unknown lag time). In other words, as social distancing reduces incidence, that will be reflected in our estimates of R0. It is worth noting that reported incidence is almost certainly lower than true incidence. However, this does not alter our estimates of R0, assuming that the rate of underreporting is constant across time.
+
+At present, we are limiting the estimate of R0 to the first 50 days of incidence data. That captures the positive growth period in incidence so far, but will need to be adjusted for future variations.
+
+# Derivation of R0
+We used the following equation to estimate R0 (eqn 3.1 in Wallinga and Lipsitch 2007) https://www.ncbi.nlm.nih.gov/pmc/articles/PMC1766383/?report=reader#!po=83.3333:
 
 
 ```{r echo=FALSE, fig.height=1, message=TRUE, warning=TRUE, paged.print=TRUE}
@@ -104,30 +347,35 @@ sd_covid_data_short <- read.csv(here::here("data/data_kelo.csv")) %>%
          incidence = positive_cases - lag(positive_cases),
          hospitalized = parse_number(as.character(hospitalized)),
          incidence1 = incidence + 1) %>%   ##adds 1 to all incidence to allow for zeros in log-linear regression
-filter(date_num <= 50)
+filter(date_num <= 55)
 
-#Run linear regression
+# #Run linear regression
 lin_reg <- brm(log(incidence1) ~ date_num, data = sd_covid_data_short,
                family = gaussian(),
                prior = c(prior(normal(0,1), class = "Intercept"),
                          prior(normal(0,0.5), class = "b"),
                          prior(cauchy(0,1), class = "sigma")),
                cores = 4, sample_prior = "yes")
+#
 
+#
+saveRDS(lin_reg, file = here::here("outputs/lin_reg.rds"))
+lin_reg <- readRDS(here::here("outputs/lin_reg.rds"))
 posts <- posterior_samples(lin_reg)
 mean_r <- round(mean(posts$b_date_num), 2)
 sd_r <- round(sd(posts$b_date_num),2)
+
 ```
 
 ```{r echo=FALSE, fig.height=4, fig.width=4, message=FALSE, warning=FALSE, paged.print=FALSE, cache = T}
-fit_mod <- fitted(lin_reg) %>% 
-  as_tibble() %>% 
-  clean_names() %>% 
-  rowid_to_column() %>% 
+fit_mod <- fitted(lin_reg) %>%
+  as_tibble() %>%
+  clean_names() %>%
+  rowid_to_column() %>%
   mutate(date = as_date(rowid + 18330) )
 
 
-plot_r <- fit_mod %>% 
+plot_r <- fit_mod %>%
   ggplot(aes(x = date, y = estimate-1)) +
   geom_point(data = sd_covid_data %>% filter(date_num > 0), aes(x = date, y = log(incidence1)-1)) +
   geom_line() +
@@ -137,9 +385,10 @@ plot_r <- fit_mod %>%
        title = "Linear fit of log incidence over time",
        subtitle = bquote('slope'~italic("r = ")~.(mean_r)~"\u00B1"~.(sd_r)~'(mean \u00B1 sd)'))  +
   theme_classic()
-
+# 
 ggsave(plot_r, file = here::here("plots/plot_r.jpg"), width = 6, height = 6)
-
+# saveRDS(plot_r, file = "plots/plot_r.rds")
+# readRDS(here::here("plots/plot_r.rds"))
 plot_r
 ```
 
@@ -525,195 +774,3 @@ Projections also assume single distributions of hospitalization, ICU, and ventil
 
 # Notes
 The predictions here are purely our own and may not reflect opinions of our state or our employers. We welcome feedback.
-
-# Alternative Approach
-## Directly modeling hospital bed use
-
-Rather than estimate hospital bed needs indirectly from an SIR (as above), there is now enough data to model the curve of cumulative COVID related hospitalizations. To do that, we first used the weibull equation to fit a non-linear curve to cumulative hospitalization data.  
-```{r echo=FALSE, fig.height=2, message=FALSE, warning=FALSE, paged.print=FALSE}
-ggplot() +
-  annotate("text", x = 0.5, y = 0.7,
-                   label = "(y_cumulative[i]) %~% italic(N)(mu[i], sigma)", parse = T, family = "serif") +
-  annotate("text", x = 0.5, y = 0.52,
-           label = "italic(mu[i]) == frac(italic(max)*date[i]^omega, theta^omega + date[i]^omega)", parse = T, family = "serif") +
-  annotate("text", x = 0.5, y = 0.35,
-           label = "italic(max) %~% italic(beta)(2.76, 549)", parse = T, family = "serif") +
-  annotate("text", x = 0.5, y = 0.27,
-           label = "italic(theta) %~% italic(Gamma)(4, 0.04)", parse = T, family = "serif") +
-   annotate("text", x = 0.5, y = 0.19,
-           label = "italic(omega) %~% italic(N)(4, 0.4)", parse = T, family = "serif") +
-  annotate("text", x = 0.5, y = 0.11,
-           label = "sigma %~% italic(HalfCauchy)(0,1)", parse = T, family = "serif") +
-  coord_cartesian(ylim = c(0.11, .8)) +
-  labs(title = "Weibull non-linear regression:") +
-  theme_void() +
-  theme(text = element_text(family = "serif"))
-```
-```{r include=FALSE, cache = T}
-sd_pop <- 903027 #from here: https://worldpopulationreview.com/states/south-dakota-population/
-
-sd_covid_data <- read.csv(here::here("data/data_kelo.csv")) %>%
-  clean_names() %>%
-  mutate(date_num = as.numeric(mdy(date)) - 18329,
-         date = mdy(date),
-         source = "SD_DOH via Keloland news",
-         incidence = positive_cases - lag(positive_cases),
-         cum_hosp = parse_number(as.character(hospitalized)),
-         incidence1 = incidence + 1,
-         cum_prop_hosp = cum_hosp/sd_pop)  ##adds 1 to all incidence to allow for zeros in log-linear regression
-
-
-all_hosp <- sd_covid_data %>% select(date, hospitalized_currently) %>% arrange(date)
-
-
-
-#hosp_beds
-sd_hospital_beds <- read_excel(here::here("data/sd_hospital_beds.xlsx")) %>% 
-  clean_names()
-
-all_beds <- sum(sd_hospital_beds$total_beds)
-
-#nyc data from here: https://www1.nyc.gov/site/doh/covid/covid-19-data.page
-nyc_hosp <- nyc_hosp <- read_csv("data/nyc_hosp.csv") %>% clean_names() %>% 
-  mutate(cum_hosp = cumsum(hospitalizations),
-         nyc_pop = 8900000,
-         date = mdy(date_of_interest),
-         date_num = as.numeric(date) - 18323,
-         cum_prop_hosp = cum_hosp/nyc_pop) %>% 
-  mutate(cum_hosp_rate = cum_hosp/max(cum_hosp),
-         date_rate = date_num/max(date_num))
-
-max_prop_hosp <- max(nyc_hosp$cum_prop_hosp)
-sd_prior_max = sd_pop*max_prop_hosp
-sd_prior_maxsd = 2000 
-
-
-# fit weibull model 
-
-beta_parms <- function(mean, sd) {
-  out <- tibble(alpha = (mean^2 - mean^3 - mean*sd^2)/sd^2,
-                beta = (mean - 2*mean^2 + mean^3 - sd^2 + mean*sd^2)/sd^2)
-  
-  plot <- plot(density(rbeta(1000, out[[1]], out[[2]])))
-  return(out)
-  return(plot)
-}
-
-gamma_parms <- function(mean, sd) {
-  out <- tibble(shape = mean^2/sd^2,
-                rate = mean/sd^2,
-                scale = 1/(mean/sd^2))
-  return(out)
-  return(plot)
-}
-
-beta_parms(mean = 0.005, sd = 0.003)
-gamma_parms(mean = 150, sd = 50)
-
-
-fit_weib <- brm(bf(cum_prop_hosp|trunc(lb = 0) ~ (ult*date_num^omega)/(theta^omega + date_num^omega),
-                   ult ~ 1, omega ~ 1, theta ~ 1,
-                   nl = TRUE),
-                data = sd_covid_data,
-                # family = gaussian(),
-                family = gaussian(),
-                prior = c(
-                  prior(beta(2.76, 549), nlpar = "ult"), #original_prior
-                  prior(gamma(4, 0.04), nlpar = "theta"),
-                  prior(normal(4, 0.4), nlpar = "omega")),
-                iter = 4000,
-                sample_prior = "yes")
-
-# fit_may11 <- fit_weib
-# fit_weib <- update(fit_may11, newdata = sd_covid_data, iter = 4000) #re-run the model above with today's data (this shortcut just prevents the need to recompile the model)
-
-# priors come from here:
-# ult is the Asymptote: Prior assumes asymptote with mean of 4000 cumulative total people ever hospitalized with wide sd of 2000 - parameterized as beta. That is
-# based on NYC's curve, in which a total of 0.45% of their population was ever hospitalized.
-
-# theta is the inflection point - Prior assumes mean of 100 with sd of 30 days - parameterized as gaussian. 
-# omega is the slope of inflection point - Prior assumes mean of 50 with sd of 20 - parameterized as gamma.
-
-
-#predictions up to 200 days after the first hospitalization
-newdata = tibble(date_num = 0:200)
-
-predict_cumulative <- predict(fit_weib, newdata = newdata, probs = c(0.025, 0.975, 0.25, 0.75))  %>% 
-  as_tibble() %>% 
-  clean_names() %>% 
-  mutate(date_num = 18329 + newdata$date_num,
-         date = as_date(date_num),
-         method = "predicted") 
-
-
-
-#make predictions of daily hospital needs
-days_in_hosp <- 10 #adjusted to visually match actual active hosps
-
-predict_dailyhosp <- predict(fit_weib, newdata = newdata, summary = F)  %>%
-  as_tibble() %>%
-  mutate(iter = 1:nrow(.)) %>%
-  gather(key, value, -iter) %>%
-  mutate(date_num = 18328 + parse_number(key),
-         date = as_date(date_num)) %>%
-  arrange(iter, date_num) %>%
-  group_by(iter) %>%
-  mutate(daily_total = value - lag(value, days_in_hosp)) %>%
-  group_by(date_num) %>%
-  drop_na(daily_total) %>%
-  mutate(daily_total = daily_total*sd_pop) %>%
-  group_by(iter, date) %>% 
-  filter(!any(daily_total < 0)) %>% 
-  group_by(date) %>% 
-  summarize(median = median(daily_total),
-            mean = mean(daily_total),
-            sd = sd(daily_total),
-            high95 = quantile(daily_total, probs = 0.975),
-            high50 = quantile(daily_total, probs = 0.75),
-            low95 = quantile(daily_total, probs = 0.025),
-            low50 = quantile(daily_total, probs = 0.25))
-```
-```{r echo=FALSE, fig.height=9, fig.width=8, message=FALSE, warning=FALSE, paged.print=FALSE}
-# Make plots
-
-cumulative_plot <- predict_cumulative %>% 
-  ggplot(aes(x = date, y = estimate*sd_pop)) +
-  geom_line() +
-  geom_ribbon(aes(ymin = q2_5*sd_pop, ymax = q97_5*sd_pop), alpha = 0.2 , fill = "dodgerblue") +
-  geom_ribbon(aes(ymin = q25*sd_pop, ymax = q75*sd_pop), alpha = 0.2 , fill = "dodgerblue")+
-  geom_point(data = sd_covid_data, aes(x = date, y = cum_prop_hosp*sd_pop),
-             shape = 21, fill = "yellow") +
-  theme_classic() +
-  scale_x_date(date_breaks = "months" , date_labels = "%b") +
-  # ylim(0, 1500) +
-  labs(y = "Cumulative hospitalized",
-       title = "Weibull predictions",
-       subtitle = "Dots are real data") +
-  NULL
-
-
-active_plot <- predict_dailyhosp %>% 
-  ggplot() +
-  geom_line(aes(x = date, y = median)) +
-  geom_ribbon(aes(x = date, ymin = low95, ymax = high95), alpha = 0.2, fill = "dodgerblue") +
-  geom_ribbon(aes(x = date, ymin = low50, ymax = high50), alpha = 0.2, fill = "dodgerblue") +
-  geom_point(data = all_hosp, aes(x = date, y = hospitalized_currently),
-             shape = 21, fill = "yellow") +
-  scale_x_date(date_breaks = "months" , date_labels = "%b") +
-  theme_classic() +
-  # geom_hline(yintercept = all_beds, color = "dodgerblue") +
-  # annotate("text", x = as.Date("2020-04-10"), y = 2960, label = "All Hospital Beds\nin SD") +
-  labs(y = "Actively hospitalized",
-       title = "Predictions versus actual hospitalizations") +
-  coord_cartesian(ylim = c(0,100)) +
-  NULL
-
-
-both_plot_weib <- plot_grid(cumulative_plot, active_plot, ncol = 1)
-
-both_plot_weib
-```
-
-## Weibull predictions
-
-Results from the model suggest that South Dakota either has or shortly will reach it's peak in COVID-related hospitalizations at ~80 people actively hospitalized. 
